# S4project

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
main/documentation/: Doxyfile  Mainpage.md
main/documentation/html/: _handle_g_p_i_o_8h.html  _p_w_m___g_p_i_o_8h.html  _p_w_m___g_p_i_o_8h_source.html  _r_g_b___control_8cpp.html  _r_g_b___control_8h.html  _r_g_b___control_8h_source.html  annotated.html  class_handle_g_p_i_o-members.html  class_handle_g_p_i_o.js  class_p_w_m___g_p_i_o.html  class_r_g_b___control.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f92cd1aeaf6b345dee158300142d1f81.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  hierarchy.html  navtree.css  navtreedata.js  navtreeindex0.js
main/doxy docs/: DoxyGenSettingsV0.00  Mainpage.md
main/doxy docs/html/: _handle_g_p_i_o_8cpp.html  _handle_g_p_i_o_8h_source.html  _p_w_m___g_p_i_o_8cpp.html  annotated.html  annotated_dup.js  class_handle_g_p_i_o.html  class_p_w_m___g_p_i_o-members.html  class_p_w_m___g_p_i_o.js  (+19 more)
main/include/: HandleADC.h  HandleBMP180.h  HandleGPIO.h  HandleHID.h  HandleI2C.h  HandleI2c.h  HandleJOYstick.h  HandlePIN.h  HandleSPI.h  LCD_Commands.h  LCD_Control.h  PWM_GPIO.h  RGB_Control.h  main.h
main/scripts/: diagram.plantuml
main/src/: HandleADC.cpp  HandleBMP180.cpp  HandleGPIO.cpp  HandleHID.cpp  HandleI2C.cpp  HandleI2c.cpp  HandleJOYstick.cpp  HandlePIN.cpp  HandleSPI.cpp  LCD_Control.cpp  PWM_GPIO.cpp  RGB_Control.cpp
(+189 files in other folders)
